# nodejs-mmbl-module

./: .gitignore  CMakeLists.txt  LICENSE  README.md  binding.gyp  index.js  package-lock.json  package.json
cppsrc/: functionexample.cpp  main.cpp
src/js/: index.js
